<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BarCodeTestActivity!</string>
    <string name="app_name">找神码</string>
	<drawable name="clr_normal">#2ecc71</drawable>
	<drawable name="clr_pressed">#27ae60</drawable>
	
	<drawable name="clr_normal2">#FFFFFF</drawable>
	<drawable name="clr_pressed2">#ECF0F1</drawable>
	
	<drawable name="clr_normal3">#FD2ecc71</drawable>
	<drawable name="clr_pressed3">#27ae60</drawable>
	
	<string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="tt_tab_activity">TTTabActivity</string>
    <string name="tt_tab_bar_scan">扫描</string>
    <string name="tt_tab_bar_search">搜索</string>
    <string name="tt_tab_bar_mylist">列表</string>
    <string name="tt_tab_bar_message">消息</string>
    <string name="tt_tab_bar_setting">设置</string>
    <string name="hello_tabone">hello tab!</string>
	
</resources>