<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:orientation="horizontal" 
    android:id="@id/tt_tab_bar_container" 
    android:background="@drawable/tt_tab_bar_bg" 
    android:layout_width="fill_parent" 
    android:layout_height="72.0dip" 
    android:layout_marginTop="-13.0dip" 
    android:layout_alignParentBottom="true"
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	
    <RelativeLayout 
        android:id="@id/channel1" 
        android:layout_gravity="center" 
        android:orientation="vertical" 
         
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginLeft="2.0dip" 
        android:layout_marginTop="8.0dip" 
        android:layout_marginRight="2.0dip" 
        android:layout_marginBottom="4.0dip" 
        android:layout_weight="1.0">
        
        <ImageView 
            android:id="@id/tt_tab_recommend_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_scan_grey" 
            android:layout_alignParentTop="true" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/text1"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_scan" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@id/channel2" 
        android:layout_gravity="center" 
        android:orientation="vertical" 

        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginLeft="2.0dip" 
        android:layout_marginTop="8.0dip" 
        android:layout_marginRight="2.0dip" 
        android:layout_marginBottom="4.0dip" 
        android:layout_weight="1.0">
        
        <ImageView 
            android:id="@id/tt_tab_best_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_search_grey" 
            android:layout_alignParentTop="true" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/text2"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_search" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@id/channel3" 
        android:layout_gravity="center" 
        android:orientation="vertical" 

        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginLeft="2.0dip" 
        android:layout_marginTop="8.0dip" 
        android:layout_marginRight="2.0dip" 
        android:layout_marginBottom="4.0dip" 
        android:layout_weight="1.0">
        
        <ImageView 
            android:id="@id/tt_tab_guide_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_mylist_grey" 
            android:layout_alignParentTop="true" 
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/text3"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_mylist" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor" />
        
        <!-- 
        <ImageView 
            android:id="@id/tt_tab_guide_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_guide_n" 
            android:layout_alignParentTop="true" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_guide" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor"/>
             -->
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@id/channel4" 
        android:layout_gravity="center" 
        android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginLeft="2.0dip" 
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="2.0dip" 
        android:layout_marginBottom="4.0dip" 
        android:layout_weight="1.0">
        
        <ImageView 
            android:id="@id/tt_tab_community_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_message_grey" 
            android:layout_alignParentTop="true" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/text4"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_message" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@id/channel5" 
        android:layout_gravity="center" 
        android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginLeft="2.0dip" 
        android:layout_marginTop="8.0dip" 
        android:layout_marginRight="2.0dip" 
        android:layout_marginBottom="4.0dip" 
        android:layout_weight="1.0">
        
        <ImageView 
            android:id="@id/tt_tab_more_bar" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/tt_tab_bar_owner_grey" 
            android:layout_alignParentTop="true" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/text5"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="2.0dip" 
            android:text="@string/tt_tab_bar_setting" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true" 
            android:textColor="@color/TextColor"/>
    </RelativeLayout>
</LinearLayout>
